# stellar-Pay

./: .gitignore  .gitlab-ci.yml  .vercelignore  LEVEL4_IDEA.md  README.md  package-lock.json  package.json  vercel.json
.github/workflows/: ci.yml
backend/: Cargo.toml  render.yaml
backend/src/: main.rs
contracts/poll/src/: lib.rs
contracts/poll/test_snapshots/tests/: test_cast_vote.1.json  test_double_vote_rejected.1.json  test_initialize_poll.1.json  test_vote_after_deadline_rejected.1.json
contracts/reward/: Cargo.toml
contracts/reward/src/: lib.rs
contracts/reward/test_snapshots/tests/: test_claim_reward_after_vote.1.json  test_claim_without_vote_rejected.1.json  test_multiple_claims_accumulate.1.json
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  Dashboard.tsx  ErrorBoundary.tsx  FeedbackView.tsx  FeedbackWidget.tsx  LandingPage.tsx  LoadingSkeleton.tsx  ThemeProvider.tsx  index.css  main.tsx  types.ts
frontend/src/components/: AnimatedTestimonials.tsx  MistralChat.tsx  animations.tsx
frontend/src/components/ui/: tabs.tsx
frontend/src/services/: analytics.ts  backend.ts  contract.ts  wallets.ts
frontend/src/test/: backend.test.ts  helpers.test.ts  types.test.ts
scripts/: deploy.ps1  deploy.sh
src/: Dashboard.tsx  LandingPage.tsx  main.tsx
