[package]
name = "stellar-reward"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
doctest = false

[package.metadata.soroban]
target = "wasm32v1-none"

[dependencies]
soroban-sdk = { version = "27.0.0-rc.1" }

[dev-dependencies]
soroban-sdk = { version = "27.0.0-rc.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
codegen-units = 1
